Update and rename Review_Webserver_Metafiles_for_Information_Leakage.md to 4.1.3.Review_Webserver_Metafiles_for_Information_Leakage.md

--- a/Web_testing/0.1.Information_Gathering/4.1.3.Review_Webserver_Metafiles_for_Information_Leakage.md
+++ b/Web_testing/0.1.Information_Gathering/4.1.3.Review_Webserver_Metafiles_for_Information_Leakage.md
@@ -1,29 +1,29 @@
- # OVERALL #
+ # TỔNG QUAN #
 
-$${\color{green}Summary}$$
+$${\color{green}Tổng \space quan}$$
 
-Checking certain files on a web server that might accidentally reveal sensitive information. These files can show details about how the website is structured or how it works.
+Kiểm tra các file trên máy chủ nếu chúng có tiết lộ các thông tin nhạt cảm. Các file này có thể có thông tin về cấu trúc web và cách chúng hoạt động
 
-$${\color{green}Problems}$$
+$${\color{green}Vấn \space đề}$$
 
-- Security Risks: These files might expose secrets or important details that can be used by attackers to exploit vulnerabilities.
-- Uncover Hidden Paths: They can reveal hidden parts of the website or application that are not immediately visible.
+- Rủi ro bảo mật: kẻ xấu có thể lợi dụng để khai thác các thông tin mật
+- Đường dẫn ẩn: Chúng có thể tiết lộ những đường dẫn ẩn của trang web
 
  # ROBOTS #
 
-$${\color{green}Definition}$$
+$${\color{green}Định \space nghĩa}$$
 
-Web Spiders, Robots, or Crawlers are automated programs that visit web pages and follow links to gather more content. They are commonly used by search engines to index websites or by security tools to analyze web applications.
+Web Spiders, Robots, hoặc trình thu thập là các chương trình tự động sẽ đi đến các trang web và đường link để lấy dữ liệu. Chúng thường được các công cụ tìm kiếm sử dụng để lập các chỉ mục web hoặc bởi các công cụ bảo mật để phân tích ứng dụng web 
 
-$${\color{green}How \space they \space work}$$
+$${\color{green}Cách \space hoạt \space động}$$
 
-1.Start at a Web Page: The robot begins by accessing a specific web page.
-2.Follow Links: It automatically follows hyperlinks on that page to other pages within the same website.
-3.Retrieve Content: It collects content from these pages, potentially traversing many levels of links.
+1.Robots sẽ bắt đầu từ việc truy cập vào trang web
+2. Tiếp đến chúng sẽ tự động đi thưo các hyperlinks từ trang này sang trang khác trong cùng 1 website
+3. Chúng thu thập thông tin qua các trang này
 
-$${\color{green}Example}$$
+$${\color{green}Ví \space dụ}$$
 
-`robots.txt` file form [Facebook](https://facebook.com/robots.txt)
+`robots.txt` file từ [Facebook](https://facebook.com/robots.txt)
 
 >User-agent: Amazonbot
 >Disallow: /
@@ -31,9 +31,9 @@ $${\color{green}Example}$$
 >User-agent: Applebot-Extended
 >Disallow: /
 
-This section of the robots.txt file provides specific directives for various bots or crawlers, instructing them not to access any part of the website.
+Phần này của file `robots.txt` cung cấp các chỉ thị cho các bot hoặc trình thu thập dữ liệu, yêu cầu chúng không được truy cập bất kỳ phần nào trong website
 
-For example, the `User-Agent: Amazonbot` refers to the spider from Google while `User-Agent: Applebot-Extended` refers to a crawler from Microsoft. User-Agent: * in the example above are not allowed to access any part of the website
+Ví dụ, `User-Agent: Amazonbot` là con bot của Google trong khi `User-Agent: Applebot-Extended` là trình thu thập dữ liệu của Microsoft. User-Agent: * trong ví dụ trên không được phép truy cập vào bất kì phần nào trong trang
 
 >Disallow: /*/plugins/*
 >Disallow: /?*next=
