--- a/Web_testing/0.1.Information_Gathering/4.1.3.Review_Webserver_Metafiles_for_Information_Leakage.md
+++ b/Web_testing/0.1.Information_Gathering/4.1.3.Review_Webserver_Metafiles_for_Information_Leakage.md
@@ -41,46 +41,47 @@ Ví dụ, `User-Agent: Amazonbot` là con bot của Google trong khi `User-Agent
 >Disallow: /ajax/
 >Disallow: /album.php
 
-`/*/plugins/*` (blocks access to any URL that includes /plugins/ in any segment)
+`/*/plugins/*` ( chặn truy cập vào bất kỳ URL nào có chứa /plugins/ trong bất kỳ đoạn nào )
 
-`/?*next=` (blocks URLs with the query parameter next=)
+`/?*next=` ( chặn các URL có tham số truy vấn  `next=`)
 
-`/a/bz?` (blocks URLs that match this exact path)
+`/a/bz?` ( chặn các URL trùng khớp chính xác với đường dẫn này)
 
-`/ajax/` (blocks access to URLs starting with /ajax/)
+`/ajax/` ( chặn truy cập các URL bắt đầu bằng `/ajax/`)
 
-`/album.php` (blocks this exact file)
+`/album.php` ( chặn tệp tin )
 
-The `robots.txt` file is retrieved from the web root directory of the web server. For example, to retrieve the `robots.txt` from www.google.com using `wget` or `curl`:
+- File `robots.txt` được lấy từ thư mục gốc của máy chủ web . Ví dụ, để lấy tệp `robots.txt` từ www.google.com bằng cách sử dụng `wget` hoặc `curl`:
 
-First, download the robots.txt file using 'curl'
+- Đầu tiên, tải xuống tệp bằng lệnh 'curl'
 >curl -O -Ss http://www.google.com/robots.txt
 
-Use `cat` to display the entire content of the file:
+- Sử dụng `cat` để xem nội dung file:
 >cat robots.txt
 
 ![image](https://github.com/user-attachments/assets/413c08fa-14bf-42ae-8971-bcfda320beb6)
 
-# ANALYZED ROBOTS.TXT USING GOOGLE WEBMASTER TOOLS #
+# PHÂN TÍCH FILE ROBOTS.TXT BẰNG GOOGLE WEBMASTER TOOLS #
  
-Web site owners can use the Google “Analyze robots.txt” function to analyze the website as part of its [Google Webmaster Tools](https://search.google.com/search-console/welcome?hl=en&utm_source=wmx&utm_medium=deprecation-pane&utm_content=home). This tool can assist with testing and the procedure is as follows:
+Ta có thể sử dụng chức năng “Analyze robots.txt” của Google để phân tích trang web [Google Webmaster Tools](https://search.google.com/search-console/welcome?hl=en&utm_source=wmx&utm_medium=deprecation-pane&utm_content=home). 
 
-1.Sign into Google Webmaster Tools with a Google account.
+1.Đăng nhập vào Google Webmaster Tools bằng tài khoản Google của bạn.
 
-2.On the dashboard, enter the URL for the site to be analyzed.
+2.Nhập URL bạn muốn phân tích.
 
-3.Choose between the available methods and follow the on screen instruction.
+3.Chọn phương pháp phân tích và làm theo hướng dẫndẫn.
 
-# META TAGS #
+# THẺ META #
 
-$${\color{green}Definition}$$
+$${\color{green}Định \space nghĩa}$$
 
-META tags are typically placed within the `<head>` section of an HTML document. They provide essential information about the webpage to browsers, search engines, and other web crawlers. Consistency in META tags across a website helps ensure that search engines and other crawlers can correctly interpret and index the content, regardless of where they enter the site.
+Thẻ META thường được đặt trong phần `<head>` của HTML. Chúng cung cấp thông tin quan trọng về trang web cho các trình duyệt, công cụ tìm kiếm và các trình thu thập dữ liệu khác. Việc thẻ META được sử dụng nhất quán trên toàn bộ trang web giúp đảm bảo các công cụ tìm kiếm, trình thu thập dữ liệu có thể hiểu  và lập chỉ mục chính xác, bất kể chúng truy cập trang web từ đâu.
 
-$${\color{green}Key \space points}$$
+$${\color{green}Ý \space chính}$$
 
-**1. Consistency Across the Site:**
+**1. Tính nhất quán trên trang web :**
 
+- Cần đảm bảo rằng các thẻ META như `description`, `keyword`, `robots` có sự đồng nhất trên toàn bộ trang web để tránh sự 
 - Ensure that META tags such as `description`, `keywords`, and `robots` are consistent across your site to avoid discrepancies in how pages are indexed and presented.
 - This consistency is particularly important if a crawler starts from a deep link rather than the web root. Consistent META tags ensure that the same rules apply throughout the site.
 
