--- a/Web_testing/0.1.Information_Gathering/4.1.3.Review_Webserver_Metafiles_for_Information_Leakage.md
+++ b/Web_testing/0.1.Information_Gathering/4.1.3.Review_Webserver_Metafiles_for_Information_Leakage.md
@@ -81,82 +81,68 @@ $${\color{green}Ý \space chính}$$
 
 **1. Tính nhất quán trên trang web :**
 
-- Cần đảm bảo rằng các thẻ META như `description`, `keyword`, `robots` có sự đồng nhất trên toàn bộ trang web để tránh sự 
-- Ensure that META tags such as `description`, `keywords`, and `robots` are consistent across your site to avoid discrepancies in how pages are indexed and presented.
-- This consistency is particularly important if a crawler starts from a deep link rather than the web root. Consistent META tags ensure that the same rules apply throughout the site.
+- Cần đảm bảo rằng các thẻ META như `description`, `keyword`, `robots` có sự đồng nhất trên toàn bộ trang web để tránh sự khác biệt trong cách các trang được lập chỉ mục và hiển thị
 
-**2. Robots META Tag:**
+**2. Thẻ META robots:**
 
-- The `robots` META tag provides directives to web crawlers on how to index and follow links on the page.
+- Thẻ META `robots` cung cấp các chỉ thị cho trình thu thập dữ liệu web về cách lập chỉ mục và theo dõi các liên kết trên trang
 
 ![image](https://github.com/user-attachments/assets/a3f5f747-c435-4359-8609-6e752ce02685)
 
-- Common values for the `robots` tag include:
-  - `index`, `follow`: Allow indexing and following links.
-  - `noindex`, `follow`: Do not index the page but follow links.
-  - `index`, `nofollow`: Index the page but do not follow links.
-  - `noindex`, `nofollow`: Do not index the page and do not follow links.
+- Một vài mục phổ biến trong thẻ `robots`:
+  - `index`, `follow`: Cho phép lập chỉ mục và theo dõi các liên kết
+  - `noindex`, `follow`: Không lập chỉ mục các trang nhưng vẫn theo dõi các liên kết
+  - `index`, `nofollow`: Lập chỉ mục trang nhưng không theo dõi các liên kết.
+  - `noindex`, `nofollow`: Không lập chỉ mục trang và không theo dõi các liên kết.
     
-**3. Robots.txt vs. META Tags:**
+**3. Robots.txt và thẻ META :**
 
-- Both `robots.txt` and META tags control crawling and indexing, but they serve different purposes:
-  - robots.txt: Used to control access to parts of your site for all crawlers, generally applied at the site level.
-  - META Tags: Provide page-specific directives and can be used to override robots.txt settings for individual pages.
+- Cả `robots.txt` và thẻ META đều kiểm soát việc thu thập thông tin và lập chỉ mục nhưng chúng có mục đích khác nhau
+  - robots.txt: Dùng để kiểm soát quyền truy cập vào các phần của trang web đối với tất cả trình thu thập dữ liệu, thường áp dụng đối với toàn trang web. Ví dụ: sử dụng `robots.txt` để ngăn các bot truy cập vào thư mục nào đó trên trang web
+  - META Tags: Cung cấp chỉ thị cụ thể cho từng trang,chặn một trang cụ thể không được lập chỉ mục dù vẫn có thể truy cập được vào toàn bộ trang web đó. Ví dụ bạn không muốn trang `/acount.html` của bạn không được lập chỉ mục, bạn có thể thêm thẻ META này vào file HTML của `/acount.html`
+ 
+> `<meta name="robots" content="noindex, nofollow">`  
+    
+**4.Thẻ META chứa nhiều thông tin:**
 
-**4.Miscellaneous META Information Tags:**
+-  Các tổ chức thường thêm các thẻ META vào nội dung web để hỗ trợ công nghệ, ví dụ như trình đọc màn hình, công cụ tìm kiếm,... Những thẻ META này rất hữu ích cho các kiểm thử viên trong việc xác định loại công nghệ được sử dụng, các đường dẫn, chức năng để kiểm tra
 
-Organizations often embed informational META tags in web content to support various technologies such as screen readers, social networking previews, search engine indexing, etc. Such meta-information can be of value to testers in identifying technologies used, and additional paths/functionality to explore and test.
+Thông tin dưới đây được lấy từ [The New York Times](https://www.nytimes.com/2024/08/27/books/review/at-war-with-ourselves-hr-mcmaster.html) 
 
-The following meta information was retrieved from [The New York Times](https://www.nytimes.com/2024/08/27/books/review/at-war-with-ourselves-hr-mcmaster.html) via View Page Source:
+Thông qua nguồn
 
 ![image](https://github.com/user-attachments/assets/31125690-d782-4d8c-9a27-c40a04a593d1)
 
 
-# SITEMAPS #
+# Sơ đồ trang web #
 
 A sitemap is a file where a developer or organization can provide information about the pages, videos, and other files offered by the site or application, and the relationship between them. Search engines can use this file to more intelligently explore your site. Testers can use `sitemap.xml` files to learn more about the site or application to explore it more completely.
 
->Sitemap là một tệp tin mà nhà phát triển hoặc tổ chức có thể cung cấp thông tin về các trang, video và các tệp tin khác của trang web hoặc ứng dụng, cũng như mối quan hệ giữa chúng. Các công cụ tìm kiếm có thể sử dụng tệp tin này để khám phá trang web của bạn một cách thông minh hơn. Các kiểm thử viên cũng có thể sử dụng các tệp tin `sitemap.xml` để tìm hiểu thêm về trang web hoặc ứng dụng và khám phá nó một cách đầy đủ hơn.
+Sơ đồ trang web là tệp tin mà nhà phát triển sử dụng để cung cấp thông tin về trang, video và các tệp tin khác của trang web hoặc ứng dụng, cùng mỗi liên kết giữu chung. Các công cụ tìm kiếm sử dụng file này để có thể dễ dàng đào sâu vào trang web hơn. Các kiểm thử viên cũng sử dụng `sitemap.xml` để hiểu hơn về trang web/ứng dụng 
 
-For example, this is the `sitemap.xml` of Google
+ví dụ, đây là file `sitemap.xml` củacủa Google
 
 ![image](https://github.com/user-attachments/assets/e1a14c09-1285-455b-a1d3-b2fc120496f0)
 
 # SECURITY.TXT #
 
-Security.txt is an accepted standard for website security information that allows security researchers to report security vulnerabilities easily. There are multiple reasons this might be of interest in testing scenarios, including but not limited to:
-- Identifying further paths or resources to include in discovery/analysis.
-- Open Source intelligence gathering.
-- Finding information on Bug Bounties, etc.
-- Social Engineering.
+- File `security.txt` là tiêu chuẩn cho thông tin bảo mật của web, cho phép các nhà nghiên cứu bảo mật báo cáo các lỗ hổng một cách dễ dàng
 
-The file may be present either in the root of the webserver or in the `.well-known/` directory. Ex:
+Tệp này có thể xuất hiện trong thư mục gốc của web hoặc trong  mục `.well-known/` . Ví dụ
 
 - `https://example.com/security.txt`
 - `https://example.com/.well-known/security.txt`
 
-Here is a real world example retrieved from [Facebook](https://www.facebook.com/security.txt)
+Ví dụ từ trang [Facebook](https://www.facebook.com/security.txt)
 
 ![image](https://github.com/user-attachments/assets/5a5217ea-3d95-4576-b15f-d3f450e9778b)
 
 # HUMANS.TXT #
 
-`humans.txt` is an initiative for knowing the people behind a website. It takes the form of a text file that contains information about the different people who have contributed to building the website. See humanstxt for more info. This file often (though not always) contains information for career or job sites/paths.
+- Đây là file cung cấp thông tin về những người đã thanh lập nên trang web
 
-Here is a real world example retrieved from [Google](https://www.google.com/humans.txt)
+Ví dụ từ trang [Google](https://www.google.com/humans.txt)
 
 ![image](https://github.com/user-attachments/assets/4da4c3bb-87c5-494a-8ca8-58bb4d57d4ec)
-
-# OTHER .well-known INFORMATION SOURCES #
-
-There are other RFCs and Internet drafts which suggest standardized uses of files within the `.well-known/` directory.
-
-# TOOLS #
-
-- Browser (View Source or Dev Tools functionality)
-- curl
-- wget
-- Burp Suite
-- ZAP
 
 
