--- a/Web_testing/0.1.Information_Gathering/4.1.4.Enumerate_Applications_on_Webserver.md
+++ b/Web_testing/0.1.Information_Gathering/4.1.4.Enumerate_Applications_on_Webserver.md
@@ -1,63 +1,42 @@
 # TỔNG QUAN #
 
-$${\color{green}Tổng /space quan }$$
+$${\color{green}Tổng \space quan }$$
 
-An essential step in testing for web application vulnerabilities is identifying which specific applications are hosted on a web server
+Một bước quan trọng trong việc kiểm thử các lỗ hổng ứng dụng web là xác định các ứng dụng đang được lưu trữ trên máy chủ web
 
-1. Vulnerabilities and Attacks: Many web applications have vulnerabilities that attackers can exploit. Knowing exactly which applications are running on a server can help identify potential weaknesses.
-2. Misconfiguration and Updates: Web applications can be misconfigured or not updated, especially when they are used only internally and thus receive less attention.
-3. IP Address and Symbolic Names: In virtual server environments, multiple websites or applications might share the same IP address but have different symbolic names. This can make it challenging to identify all applications.
-4. Incomplete Information: When provided with a list of IP addresses and symbolic names, there might be missing information, reducing the effectiveness of the security assessment.
-5. Obscure URLs: Some applications might be located at hard-to-find or non-publicly advertised URLs, making detection and testing more difficult.
+1.Lỗ hổng: Nhiều ứng dụng web có lỗ hổng mà kẻ tấn công có thể khai thác. Việc biết chính xác các ứng dụng nào đang chạy trên máy chủ có thể giúp nhận biết các điểm yếu tiềm ẩn.
 
->1.Lỗ Hổng và Tấn Công: Nhiều ứng dụng web có lỗ hổng mà kẻ tấn công có thể khai thác. Việc biết chính xác các ứng dụng nào đang chạy trên máy chủ có thể giúp nhận diện các điểm yếu tiềm ẩn.
->
->2.Cấu Hình Sai và Cập Nhật: Các ứng dụng web có thể bị cấu hình sai hoặc không được cập nhật, đặc biệt là khi chúng được sử dụng chỉ trong nội bộ và không được chú ý nhiều.
->
->3.Địa Chỉ IP và Tên Biểu Tượng: Trong môi trường máy chủ ảo, nhiều trang web hoặc ứng dụng có thể sử dụng cùng một địa chỉ IP nhưng có các tên biểu tượng khác nhau. Điều này làm cho việc xác định tất cả các ứng dụng có thể gặp khó khăn.
->
->4.Thông Tin Không Đầy Đủ: Khi được giao một danh sách địa chỉ IP và tên biểu tượng, có thể có thông tin bị thiếu, làm giảm hiệu quả của việc kiểm tra bảo mật.
->
->5.URL Không Rõ Ràng: Một số ứng dụng có thể được đặt ở các URL không dễ phát hiện hoặc không được quảng cáo công khai, làm cho việc phát hiện và kiểm tra trở nên khó khăn hơn.
+2.Cấu hình sai và cập nhật: Các ứng dụng web có thể bị cấu hình sai hoặc không được cập nhật
 
-# HOW TO TEST #
+3.Địa chỉ IP và tên website: Trong môi trường máy chủ ảo, nhiều trang web hoặc ứng dụng có thể sử dụng cùng một địa chỉ IP nhưng có các tên website khác nhau. 
 
-**Web Application Discovery** is the process of identifying web applications hosted on a specific infrastructure, usually defined by a set of IP addresses or DNS names. This information is provided before conducting security assessments such as penetration testing or application assessments. The goal is to identify all accessible applications through the given targets.
+4.URL không rõ ràng: Một số ứng dụng có thể được đặt ở các URL không dễ phát hiện hoặc không được công khai
 
->Quá trình khám phá ứng dụng web nhằm xác định các ứng dụng web trên một cơ sở hạ tầng cụ thể. Thông tin này thường là một tập hợp địa chỉ IP hoặc tên DNS, và được cung cấp trước khi thực hiện đánh giá bảo mật, như kiểm tra xâm nhập (penetration test) hoặc đánh giá ứng dụng. Mục tiêu là xác định tất cả các ứng dụng có thể truy cập được qua các mục tiêu đã cho.
+# CÁCH KIỂM TRA #
 
+**Điều tra web** là quá trình xác định các ứng dụng web trên 1 hệ thống cụ thể, thường là địa chỉ IP, tên DNS. những thông tin này sẽ được cung cấp trước khi thực hiện đánh giá kiểm thử. Mục tiêu là xác định các web có trên hệ thống
 
-$${\color{green}Factors \space Affecting \space Web \space Application \space Discovery}$$
+$${\color{green}Các \space yếu \space tố \space ảnh \space hưởng \space đến \space số \space lượng \space trang \space web \space có \space liên \space quan \space đến \space 1 \space tên \space DNS \space hoặc \space địa \space chỉ \space IP}$$
 
-**1.Different Base URLs**
+**1.Đia chỉ URLs khác nhau**
 
-- Typically, web applications are accessed at URLs like `http://www.example.com.` However, applications don't necessarily have to start at the root `/`. A single domain name can host multiple applications, such as:
+- Về cơ bản, các trang web sẽ có URL có dạng `http://www.example.com.` Tuy nhiên, cũng có những trang web không bắt đầu từ `/`. Một tên miền có thể có nhiều trang web ăn theo, ví dụ như
   - http://www.example.com/url1
   - http://www.example.com/url2
   - http://www.example.com/url3
  
-- These applications might not be visible on the main page, and without explicit knowledge of these specific URLs, they remain hidden. This method is often used when the owner wants to keep the application's address discreet without advertising it publicly.
+- Những trang này có thể không hiển thị trên trang chính và nếu không có thông tin gì cụ thể về các URL này thì chúng vẫn sẽ bị ẩn. Phương thức này thường được sử dụng khi chủ sở hữu muốn giữ địa chỉ web bí mật hơn là công khai
 
-**2.Non-Standard Ports:**
+**2. Cổng không chuẩn:**
 
-- While web applications commonly run on ports 80 (HTTP) and 443 (HTTPS), there's no strict rule for this. Applications can be hosted on any port, like `http://www.example.com:20000/`. Using non-standard ports can make applications less easily discoverable.
+- Trong khi các trang thường chạy trên cổng 80 (HTTP) và 443(HTTPS) nhưng không có gì bắt buộc về điều này. Các trang có thể sử dụng bất kỳ cổng nào ví dụ như `http://www.example.com:20000/`. Sử dụng cổng không chuẩn có thể giúp các trangg ít bị phát hiện hơn nhưng cũng di kèm các rủi ro bảo mật
 
-**3.Virtual Hosts:**
+**3.Máy chủ ảo:**
 
 - DNS allows a single IP address to be associated with multiple domain names. For example:
   - IP `192.168.1.100` could be linked to `www.example.com`, `helpdesk.example.com`, and `webmail.example.com.`
 - Each domain name can serve different content using virtual hosts, identified by the `Host` header in HTTP requests. If additional domain names are unknown, other web applications may go undetected.
 
->**1.URL Khác Nhau**
->- Mặc định, ứng dụng web thường truy cập tại URL như `http://www.example.com.` Tuy nhiên, không có quy định bắt buộc ứng dụng phải bắt đầu từ đường dẫn `/`. Một tên miền có thể chứa nhiều ứng dụng khác nhau, ví dụ:
->  - http://www.example.com/url1
-> - http://www.example.com/url2
->  - http://www.example.com/url3
->- Các ứng dụng này có thể không hiển thị trên trang chủ, và nếu người kiểm tra không biết đến các URL cụ thể này, thì họ sẽ không tìm thấy chúng. Cách này thường được dùng nếu chủ sở hữu muốn giữ kín địa chỉ ứng dụng mà không cần quảng cáo công khai.
->  
->**2.Cổng Không Chuẩn (Non-standard Ports)**
->- Ứng dụng web thường hoạt động trên cổng 80 (HTTP) và 443 (HTTPS), nhưng không có gì bắt buộc điều này. Ứng dụng có thể sử dụng cổng bất kỳ, ví dụ như `http://www.example.com:20000`. Việc sử dụng cổng không chuẩn giúp ứng dụng không bị phát hiện dễ dàng.
->
 >**3.Máy Chủ Ảo (Virtual Hosts)**
 >- DNS cho phép một địa chỉ IP có thể liên kết với nhiều tên biểu tượng khác nhau, ví dụ:
 >    - IP `192.168.1.100` có thể liên kết với `www.example.com`, `helpdesk.example.com`, và `webmail.example.com.`
