--- a/Web_testing/0.1.Information_Gathering/4.1.2.Fingerprint_Web_Server.md
+++ b/Web_testing/0.1.Information_Gathering/4.1.2.Fingerprint_Web_Server.md
@@ -53,7 +53,7 @@ $${\color{green}Cách \space hoạt \space động}$$
 
 - Khi gửi các yêu cầu sai lệch, máy chủ sẽ phản hồi bằng các thông báo lỗi như 400 Bad Request ( sai cú pháp hoặc không hợp lệ ), 403 Forbidden ( từ chối thực hiện do vấn đề quyền truy cập ), 404 Not Found ( không thể tìm thấy thông tin bạn yêu cầu ), 500 Internal Serval Error ( lỗi nội bộ và không thể hoàn thành yêu cầu ). Điều này có thể tiết lộ
   - Loại máy chủ: Apache, Nginx, IIS, etc.
-  - Phien bản máy chủ : ví dụ, Apache/2.4.41 (Ubuntu).
+  - Phiên bản máy chủ : ví dụ, Apache/2.4.41 (Ubuntu).
   - Thông tin về hệ điều hành: ví dụ: Ubuntu, Windows Server
   - Thông tin về cấu hình bảo mật: một vài thông báo lỗi có thể tiết lộ thông tin về cấu hình bảo mật hoặc thư 
 
