--- a/Web_testing/0.1.Information_Gathering/4.1.4.Enumerate_Applications_on_Webserver.md
+++ b/Web_testing/0.1.Information_Gathering/4.1.4.Enumerate_Applications_on_Webserver.md
@@ -33,7 +33,8 @@ $${\color{green}Các \space yếu \space tố \space ảnh \space hưởng \spac
 
 **3.Máy chủ ảo:**
 
-- DNS allows a single IP address to be associated with multiple domain names. For example:
+- DNS cho phép một địa chỉ IP duy nhất có thể liên kết với nhiều tên miền khác nhau. Ví dụ:
+  - IP `192.168.1.100` có thể kết nối 
   - IP `192.168.1.100` could be linked to `www.example.com`, `helpdesk.example.com`, and `webmail.example.com.`
 - Each domain name can serve different content using virtual hosts, identified by the `Host` header in HTTP requests. If additional domain names are unknown, other web applications may go undetected.
 
